src/test/resources/repos/invalid-binary-desc-subjects/a6f/e58/a7f/a6fe58a7f87784a02c1d2e3623a7dc7c52fdd54932dd9457ea8ed060c5fc73a3/inventory.json.sha512
de67eab79c13cde7be8e4d8098ccfab52703437b9d1e1601daaf134805aaa5642e0d0fe34df32ac02c474a6127cf06333158c00217c9ea200abcc23e12312de8	inventory.json